Blog/static/Blog/main.css
body {
    background: #f7f7f7;
    color: #333333;
    margin-top: 5rem;
}

p {
    font-family: 'Roboto', sans-serif;
    color: #3c3d47;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: #444444;
}

ul {
    margin: 0;
}

.navbar-color {
    background-color: #5f788a;
}

.site-header .navbar-nav .nav-link {
    font-family: 'Rubik', sans-serif;
    font-weight: 900;
    color: #cbd5db;
    margin-left: 1.25rem!important;
    margin-right: 1.25rem!important;
}

.site-header .navbar-nav .nav-link:hover {
    color: #ffffff;
}

.site-header .navbar-nav .nav-link.active {
    font-weight: 500;
}

.dropbtn {
    background-color: transparent;
    /* color: #cbd5db; */
    padding: 16px;
    font-size: 16px;
    border: none;
}

.user-image {
    height: 20px;
    width: 25px;
    cursor: pointer;
}

.dropdown {
    position: relative;
    display: inline-block;
}

a.dropdown-toggle {
    color: black;
}

.dropdown-menu {
    display: none;
    position: absolute;
    background-color: #fafafa;
    /* min-width: 160px; */
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
    text-align: left;
    /* width: 100%; */
    overflow: auto;
}

#dropdown .dropdown-menu .nav-link {
    color: #444444;
}

.dropdown-menu .nav-link:hover {
    font-weight: 700;
}

#main {
    margin: 2rem;
}

#latest-posts,
#top-tags,
#all-tags {
    background-color: #f8f8ff;
}

.content-section {
    background: #ffffff;
    padding: 10px 10px;
    border: 1px solid #dddddd;
    border-radius: 3px;
    margin-bottom: 2px;
}

.article-title {
    font-family: Dejavu sans;
    font-weight: 600;
    color: #444444;
}

footer {
    display: flex;
    background-color: #13181b;
}

footer h5,
footer h6,
footer p,
footer .fa-envelope {
    color: #f2f4f6!important;
}

footer .fa {
    font-size: 1.2rem;
}

footer>.col1,
footer>.col2,
footer>.col3 {
    flex: 3 1 0;
}

.footer>.col1>*,
.footer>.col2>*,
.footer>.col3>* {
    margin: 0.5rem;
    padding: 1rem;
}

.footer>.col2 {
    text-align: center;
}

a.article-title:hover {
    color: #428bca;
    text-decoration: none;
}

.article-short-des p {
    display: inline;
}

.article-content {
    white-space: pre-line;
}

.article-img {
    height: 65px;
    width: 65px;
    margin-right: 16px;
    float: left;
}

.article-metadata {
    padding-bottom: 2px;
    margin-bottom: 5px;
    border-top: 1px solid #e3e3e3;
    margin-left: 5px;
}

.article-metadata a:hover {
    color: #333;
    text-decoration: none;
}

.article-svg {
    width: 25px;
    height: 25px;
    vertical-align: middle;
}

.account-img {
    height: 125px;
    width: 125px;
    margin-right: 20px;
    margin-bottom: 16px;
}

#post-detail .article-img img {
    height: 125px;
    width: 125px;
    margin-right: 20px;
    margin-bottom: 16px;
}

#post-detail .article-info {
    display: inline-block;
    width: 80%;
}

#post-detail .article-metadata {
    padding-bottom: 1px;
    margin-bottom: 4px;
    border-bottom: 1px solid #e3e3e3;
    /* display: flex; */
}

.account-heading {
    font-size: 2.5rem;
}

.article-tags {
    display: inline-block;
    padding: .4em .5em;
    margin: 0.5rem 2px 0.5rem 0;
    font-size: 15px;
    line-height: 1;
    white-space: nowrap;
    text-decoration: none;
    text-align: center;
    border-width: 1px;
    border-style: solid;
    border-radius: 3px;
    transition: all .15s ease-in-out;
    color: #39739d;
    background-color: #E1ECF4;
    border-color: #E1ECF4;
}

.Profile {
    background-color: aliceblue;
}

.profile-info {
    display: flex;
    flex-direction: column;
}

.avatar {
    /* max-width: 200px; */
    max-height: 200px;
    line-height: 200px;
    text-align: center;
}

.avatar img {
    max-height: 100%;
    max-width: 100%;
    /* vertical-align: middle; */
}

#response {
    font-size: 0.9rem;
    position: fixed;
    top: 70px;
    left: 28%;
    opacity: 0.9;
}

#post-options {
    position: absolute;
    left: 75%;
    top: 5%;
}

#article-share-container {
    display: flex;
    flex-direction: column;
}

.article-detail {
    margin-left: 4rem;
}

#share {
    text-align: center;
    position: fixed;
    top: 35%;
    left: 2%;
    display: inline-block;
}

.share-icon {
    display: inline;
    font-size: 16px!important;
    text-shadow: 1px 1px 1px #ccc;
}

.share-icon a:hover {
    opacity: 0.55;
}

#bookmark:hover,
#unbookmark:hover {
    opacity: 1;
}

.share-icon li {
    display: inline;
}

.copy,
.bookmark {
    background-color: #fff;
    border: none;
}

#bookmark,
#unbookmark {
    padding-top: 0px;
    padding-bottom: 0px;
}

#share .share-icon li {
    display: block;
    margin: 0.5rem auto;
}

.copy,
.bookmark {
    border: none;
    background: #fff;
    /* font-size: 1.2rem!important; */
}

.fa {
    padding: 0.2rem;
}

.fa-facebook {
    background: #3b5998;
    color: #fff!important;
    padding-right: 0.3rem;
    padding-left: 0.3rem;
}

.fa-twitter {
    background: #00acee;
    color: white;
}

.fa-linkedin {
    background: #0077b5;
    color: #fff !important;
}

.fa-reddit {
    background: #fff;
    color: #ff4500 !important;
}

.fa-whatsapp {
    background: #43d854;
    color: #fff !important;
}


/* 
.fa-bookmark {
    font-size: 24px;
} */

.articles {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    flex: 1;
}

.row {
    display: flex;
}

.article-card>.col {
    flex: 1;
}

.article-card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    margin-top: 5px;
    margin-bottom: 1.5rem;
    /* height: 100%; */
}

.article-card>.article-thumbnail {
    width: 100%;
    height: 200px;
}

.article-card>.article-thumbnail>img {
    /* max-width: 100%; */
    width: 100%;
    height: 100%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding-top: 7px;
}

.article-card:hover,
.article-card:focus {
    cursor: pointer;
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.article-container {
    padding: 0.5rem 5px;
}

.article-list>.article-thumbnail>img {
    width: 200px;
    height: 130px;
}

.tags {
    margin-top: 5px;
}

#details>.article-contents {
    display: flex;
    flex-direction: column;
}

.heading {
    font-family: 'Rubik', sans-serif;
    color: #272121;
    margin-top: 2rem!important;
    display: flex;
    flex-direction: row;
}

.featured-articles {
    height: 38rem;
    padding: 5px 10px;
    display: flex;
    flex-direction: row;
}

.featured-articles>.latest-featured {
    flex: 3 1 0;
    height: 100%;
}

.aside {
    display: flex;
    flex-direction: column;
    flex: 2 1 0;
    max-height: 100%;
}

.featured-articles>.aside>.aside-featured {
    flex: 1;
    height: 50%;
}

.featured-articles>*>.article-card,
.featured-articles>.aside>*>.article-card {
    margin-top: 5px;
    margin-bottom: 5px;
    height: 100%;
}

.featured-articles>.latest-featured>.article-card>.article-thumbnail {
    height: 75%;
}

.featured-articles>.aside-featured>.article-card>.article-thumbnail {
    height: 40%;
}

.view-more {
    display: block;
    margin: auto;
}

.resp-sharing-button__link,
.resp-sharing-button__icon {
    display: inline-block
}

.resp-sharing-button__link {
    text-decoration: none;
    color: #fff;
    margin: 0.5em
}

.resp-sharing-button {
    border-radius: 5px;
    transition: 25ms ease-out;
    padding: 0.5em 0.75em;
    font-family: Helvetica Neue, Helvetica, Arial, sans-serif
}

.resp-sharing-button__icon svg {
    width: 1em;
    height: 1em;
    margin-right: 0.4em;
    vertical-align: top
}

.resp-sharing-button--small svg {
    margin: 0;
    vertical-align: middle
}


/* Non solid icons get a stroke */

.resp-sharing-button__icon {
    stroke: #fff;
    fill: none
}


/* Solid icons get a fill */

.resp-sharing-button__icon--solid,
.resp-sharing-button__icon--solidcircle {
    fill: #fff;
    stroke: none
}

.resp-sharing-button--twitter {
    background-color: #55acee
}

.resp-sharing-button--twitter:hover {
    background-color: #2795e9
}

.resp-sharing-button--facebook {
    background-color: #3b5998
}

.resp-sharing-button--facebook:hover {
    background-color: #2d4373
}

.resp-sharing-button--linkedin {
    background-color: #0077b5
}

.resp-sharing-button--linkedin:hover {
    background-color: #046293
}

.resp-sharing-button--facebook {
    background-color: #3b5998;
    border-color: #3b5998;
}

.resp-sharing-button--facebook:hover,
.resp-sharing-button--facebook:active {
    background-color: #2d4373;
    border-color: #2d4373;
}

.resp-sharing-button--twitter {
    background-color: #55acee;
    border-color: #55acee;
}

.resp-sharing-button--twitter:hover,
.resp-sharing-button--twitter:active {
    background-color: #2795e9;
    border-color: #2795e9;
}

.resp-sharing-button--linkedin {
    background-color: #0077b5;
    border-color: #0077b5;
}

.resp-sharing-button--linkedin:hover,
.resp-sharing-button--linkedin:active {
    background-color: #046293;
    border-color: #046293;
}


/* .num {
    font-family: 'CooperHewittBold';
    font-weight: normal;
    font-style: normal;
} */

@media(max-width:600px) {
    #post-options {
        left: 55%;
    }
    #share {
        position: initial;
        top: auto;
        left: auto;
        display: initial;
    }
    .share-icon {
        float: none !important;
        display: inline-flex;
    }
    #share .share-icon li {
        margin: 0;
    }
    /* .fa-bookmark {
        margin-top: -1rem;
    } */
    #article-share-container {
        flex-direction: column-reverse;
    }
    .article-detail {
        margin-left: 0;
    }
    .article-list>.article-thumbnail>img {
        width: 100%;
        height: 160px;
    }
    .article-list>.article-thumbnail {
        padding-left: 0;
        padding-right: 0;
    }
    #details {
        padding: 5px 5px;
    }
    .article-card {
        margin-bottom: 10px!important;
    }
    .featured-articles {
        /* flex-direction: column;
        height: 90rem; */
        display: block;
        height: auto;
    }
    /* .featured-articles>.latest-featured {
        flex: 1;
    } */
    .featured-articles>.latest-featured>.article-card>.article-thumbnail {
        height: 200px;
    }
    .aside {
        display: block;
    }
    .featured-articles>.aside>.aside-featured {
        height: auto;
    }
    .view-more {
        /* display: block; */
        margin: 5px auto;
    }
    footer {
        flex-direction: column;
    }
    .footer>.col1>*,
    .footer>.col2>*,
    .footer>.col3>* {
        padding: 0.5rem;
    }
}

